@@ -5,4 +5,4 @@ start on (filesystem and started rsyslog)
 console output
 task
 
-exec cloud-init-cfg all cloud_config
+exec cloud-init-cfg all config
